kubernetes/easyshop_frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easyshopuideployment
  namespace: easyshop
  labels:
    app: easyshopUIdeployment
spec:  
  replicas: 2
  selector:
    matchLabels:
      app: easyshopUI_deployment
  template:
    metadata:
      name: easyshopUIpod
      namespace: easyshop
      labels:
        app: easyshopUI_deployment
    spec:
      containers:
        - name: easyshopui
          image: siddhantkudal/easyshop:41
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
