kubernetes/mongodb_deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: easyshopdb
  namespace: easyshop
  labels:
    app: easyshopdb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: easyshop_db_pod
  template:
    metadata:
      name: easyshop_pod
      namespace: easyshop
      labels:
        app: easyshop_db_pod
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
