kubernetes/statefuleset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"annotations":{},"labels":{"app":"easyshopdb"},"name":"easyshopdb","namespace":"easyshop"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"easyshop_db_pod"}},"template":{"metadata":{"labels":{"app":"easyshop_db_pod"},"name":"easyshop_pod","namespace":"easyshop"},"spec":{"containers":[{"image":"mongo:latest","name":"mongo","ports":[{"containerPort":27017}],"resources":{"limits":{"cpu":"500m","memory":"512Mi"},"requests":{"cpu": [...]
  creationTimestamp: "2025-05-26T16:48:41Z"
  generation: 1
  labels:
    app: easyshopdb
  name: easyshopdb
  namespace: easyshop
  resourceVersion: "548288"
  uid: ce673c9b-9c2c-4f9d-86a2-a0b31573cae1
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: easyshop_db_pod
  serviceName: easyshopmongodb
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: easyshop_db_pod
      name: easyshop_pod
      namespace: easyshop
    spec:
      containers:
      - image: mongo:latest
        imagePullPolicy: Always
        name: mongo
        ports:
        - containerPort: 27017
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 200Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
status:
  availableReplicas: 2
  collisionCount: 0
  currentReplicas: 2
  currentRevision: easyshopdb-847d5695c5
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updateRevision: easyshopdb-847d5695c5
  updatedReplicas: 2
