kubernetes/easyshop_frontend_service.yml
kind: Service
apiVersion: v1
metadata:
  name: easyshopservice
  namespace: easyshop
spec:
  selector:
    app: easyshopUI_deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
