kubernetes/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: easyshop-ingress
  namespace: easyshop
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: "subnet-0a34e2b55f1431f03,subnet-027e87e7f99ac8763"
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "3000"
spec:
  rules:
  - http:
     paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: easyshopservice
            port:
              number: 80
